# glue

./: .gitignore  .travis.yml  bumpversion.sh  cabal.project  glue.cabal  readme.md  servicefabric.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack.yaml  uploadrelease.sh
example/: Main.hs
example/Glue/Example/: BatcherExample.hs
glue-common/: glue-common.cabal
glue-common/src/Glue/: Types.hs
glue-core/: glue-core.cabal
glue-core/src/Glue/: Batcher.hs  Caching.hs  CircuitBreaker.hs  DogpileProtection.hs  Failover.hs  Preload.hs  Retry.hs  Switching.hs  Timeout.hs
glue-core/test/: Main.hs
glue-core/test/Glue/: BatcherSpec.hs  CachingSpec.hs  CircuitBreakerSpec.hs  DogpileProtectionSpec.hs  FailoverSpec.hs  PreloadSpec.hs  RetrySpec.hs  SwitchingSpec.hs  Testing.hs  TimeoutSpec.hs
glue-ekg/: LICENSE  glue-ekg.cabal
glue-ekg/src/Glue/: Ekg.hs
glue-ekg/test/: Main.hs
glue-ekg/test/Glue/: EkgSpec.hs
glue-example/: glue-example.cabal
glue-example/src/: Main.hs
glue-example/src/Glue/Example/: BatcherExample.hs
src/: Glue.hs  ServiceFabric.hs
src/Glue/: Batcher.hs  Caching.hs  CircuitBreaker.hs  DogpileProtection.hs  Failover.hs  Preload.hs  Retry.hs  Stats.hs  Switching.hs  Timeout.hs  Types.hs
src/ServiceFabric/: Batcher.hs  Caching.hs  CircuitBreaker.hs  DogpileProtection.hs  Failover.hs  Retry.hs  Timeout.hs  Types.hs
test/: Main.hs
test/Glue/: CachingSpec.hs  CircuitBreakerSpec.hs  DogpileProtectionSpec.hs  FailoverSpec.hs  PreloadSpec.hs  RetrySpec.hs  StatsSpec.hs
test/ServiceFabric/: BatcherSpec.hs  CachingSpec.hs  CircuitBreakerSpec.hs  DogpileProtectionSpec.hs  FailoverSpec.hs  RetrySpec.hs  TimeoutSpec.hs
