name:                   glue
version:                0.1.0.0
-- synopsis:            
-- description:         
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
-- copyright:           
category:               Network
build-type:             Simple
-- extra-source-files:  
cabal-version:          >=1.10

library
  exposed-modules:      Glue
  -- other-modules:       
  -- other-extensions:    
  build-depends:        base >=4.6 && <4.8,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable
  ghc-options:          -rtsopts
                        -Wall
                        -O2
                        -threaded
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite tests
  build-depends:        base ==4.*,
                        QuickCheck -any,
                        hspec -any,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        async
  ghc-options:          -rtsopts
                        -Wall
                        -O2
                        -threaded
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  buildable:            True
  default-language:     Haskell2010
  hs-source-dirs:       test,
                        src