name:                   glue
version:                0.1.2
synopsis:               Make better services.
description:            Implements common patterns used in building services that run smoothly and efficiently.
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
category:               Network
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

source-repository head
  type:                git
  location:            git://github.com/seanparsons/glue.git

library
  exposed-modules:      Glue
                        Glue.Types
                        Glue.Failover
                        Glue.Caching
                        Glue.CircuitBreaker
                        Glue.DogpileProtection
                        Glue.Timeout
                        Glue.Retry
                        Glue.Batcher
                        Glue.Stats
                        Glue.Preload
  -- other-extensions:
  build-depends:        base >=4.6 && <4.9,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core >=0.1.0.4 && <1,
                        text,
                        monad-loops
  ghc-options:          -rtsopts
                        -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010

executable example
  main-is:              Main.hs
  hs-source-dirs:       example
  other-modules:        Glue.Example.BatcherExample
  build-depends:        base ==4.*,
                        glue,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text,
                        monad-loops,
                        async
  default-language:     Haskell2010

test-suite tests
  build-depends:        base ==4.*,
                        QuickCheck -any,
                        quickcheck-instances,
                        hspec >=2.1.10,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text,
                        monad-loops,
                        async
  other-modules:        Glue.CachingSpec
                        Glue.FailoverSpec
                        Glue.RetrySpec
                        Glue.DogpileProtectionSpec
                        Glue.Testing
                        Glue.TimeoutSpec
                        Glue.StatsSpec
                        Glue.CircuitBreakerSpec
                        Glue.BatcherSpec
                        Glue.PreloadSpec
                        Spec
  ghc-options:          -rtsopts
                        -Wall
                        -O2
                        -threaded
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  buildable:            True
  default-language:     Haskell2010
  hs-source-dirs:       test,
                        src