name:                   glue-common
version:                0.4.8
synopsis:               Make better services and clients.
description:            Common types and base functions used in the glue family of libraries.
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
category:               Network
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:                 git
  location:             git://github.com/seanparsons/glue.git

library
  exposed-modules:      Glue.Types
  -- other-extensions:
  build-depends:        base >=4.6 && <4.9,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        text
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite glue-common-tests
  build-depends:        base ==4.*,
                        glue-common,
                        QuickCheck -any,
                        quickcheck-instances,
                        hspec >=2.1.10,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text,
                        async
  other-modules:        Spec
  ghc-options:          -rtsopts
                        -Wall
                        -O2
                        -threaded
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  buildable:            True
  default-language:     Haskell2010
  hs-source-dirs:       test