name:                   glue-ekg
version:                0.4.8
synopsis:               Make better services and clients.
description:            Glue library that makes use of ekg for providing stats around services and clients.
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
category:               Network
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:                 git
  location:             git://github.com/seanparsons/glue.git

library
  exposed-modules:      Glue.Ekg
  -- other-extensions:
  build-depends:        base >=4.6 && <4.9,
                        glue-common == 0.4.8,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite glue-ekg-tests
  build-depends:        base ==4.*,
                        glue-common,
                        glue-ekg,
                        QuickCheck -any,
                        quickcheck-instances,
                        hspec >=2.1.10,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text,
                        async
  other-modules:        Glue.EkgSpec
                        Spec
  ghc-options:          -rtsopts
                        -Wall
                        -O2
                        -threaded
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  buildable:            True
  default-language:     Haskell2010
  hs-source-dirs:       test