name:                   glue-example
version:                0.3.0
synopsis:               Make better services.
description:            Implements common patterns used in building services that run smoothly and efficiently.
license:                BSD3
license-file:           ../LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
category:               Network
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:                 git
  location:             git://github.com/seanparsons/glue.git

executable glue-example
  main-is:              Main.hs
  hs-source-dirs:       src
  other-modules:        Glue.Example.BatcherExample
  build-depends:        base ==4.*,
                        glue-common,
                        glue-core,
                        glue-ekg,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text,
                        monad-loops,
                        async
  default-language:     Haskell2010
