name:                   glue-example
version:                0.4.7
synopsis:               Make better services and clients.
description:            Examples of the use of glue library functionality.
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
category:               Network
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:                 git
  location:             git://github.com/seanparsons/glue.git

executable glue-example
  main-is:              Main.hs
  hs-source-dirs:       src
  other-modules:        Glue.Example.BatcherExample
  build-depends:        base ==4.*,
                        glue-common == 0.4.7,
                        glue-core == 0.4.7,
                        glue-ekg == 0.4.7,
                        transformers,
                        transformers-base,
                        lifted-base,
                        time,
                        monad-control,
                        unordered-containers,
                        hashable,
                        ekg-core,
                        text,
                        monad-loops,
                        async
  default-language:     Haskell2010
